--- a/style-page.css
+++ b/style-page.css
@@ -54,8 +54,11 @@ main {
   display: grid;
   grid-template-columns: 1fr;
   grid-column-gap: 30px;
-  padding-left: 30px;
-  padding-right: 30px;
+}
+.info,
+header .title,
+header nav {
+  padding: 10px 20px;
 }
 .info {
   margin-top: -110px;
@@ -93,6 +96,10 @@ main {
 }
 .topmenu nav {
   padding: 30px 0px;
+  display: flex;
+  overflow: scroll;
+  max-width: 100vw;
+  scrollbar-width: none;
 }
 .topmenu a {
   text-decoration: none;
@@ -106,7 +113,7 @@ main {
   width: 100%;
   position: absolute;
   left: 0;
-  bottom: 0px;
+  top: 0px;
   background-color: var(--drk-blue);
   transform: scale(1, 1);
   transition: transform 200ms ease-in;
@@ -170,7 +177,7 @@ aside .menu a:hover {
 .control::after,
 .control::before {
   display: block;
-  width: 40px;
+  width: 30px;
   height: 3px;
   background-color: var(--drk-blue);
 }
